# agents-skills-plugins

./: .gitignore  CONTRIBUTING.md  NEW-FEATURES.md  PROJECT-STATUS.md  README.md  plugins-index.json
plugins/mcp-predictive-market/: .gitignore  README.md  pyproject.toml
plugins/mcp-predictive-market/.claude-plugin/: plugin.json
plugins/mcp-predictive-market/docs/plans/: 2026-01-12-mcp-predictive-market-design.md  2026-01-12-mvp-implementation.md
plugins/mcp-predictive-market/src/mcp_predictive_market/: __init__.py  errors.py  rate_limiter.py  schema.py  server.py  tools.py
plugins/mcp-predictive-market/src/mcp_predictive_market/adapters/: __init__.py  base.py  kalshi.py  manifold.py  metaculus.py  polymarket.py  predictit.py
plugins/mcp-predictive-market/src/mcp_predictive_market/analysis/: __init__.py  arbitrage.py  matching.py
plugins/mcp-predictive-market/src/mcp_predictive_market/state/: __init__.py  memvid_client.py
plugins/mcp-predictive-market/tests/: test_errors.py  test_integration.py  test_rate_limiter.py  test_schema.py  test_server.py  test_tools.py
plugins/mcp-predictive-market/tests/fixtures/: kalshi_responses.py  manifold_responses.py  metaculus_responses.py  polymarket_responses.py  predictit_responses.py
plugins/mcp-predictive-market/tests/test_adapters/: test_base.py  test_kalshi.py  test_manifold.py  test_metaculus.py  test_polymarket.py  test_predictit.py
plugins/mcp-predictive-market/tests/test_analysis/: test_arbitrage.py  test_matching.py
plugins/mcp-predictive-market/tests/test_state/: test_memvid_client.py
(+204 files in other folders)
