[project]
name = "mcp-predictive-market"
version = "0.1.0"
description = "MCP server for querying and aggregating prediction market data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_predictive_market"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
